<resources>
    <string name="app_name">AXDLockers</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password_reset">Forgot your password? \nTap here.</string>
    <string name="error_email_required">Email address is mandatory</string>

    <string name="password">Password</string>
    <string name="user_email">User/Email</string>
    <string name="log_in">Log In</string>
    <string name="todo">TODO</string>
    <string name="text_info">The locker that you associate with the last scanned QR code:</string>
    <string name="text_info1">You can search for a locker using one of the following filters:</string>
    <string name="locker_number1">#locker number</string>
    <string name="full_name">full name</string>
    <string name="unit_number"># unit</string>
    <string name="locker_street">locker street name</string>
    <string name="locker_zip">locker zip code</string>
    <string name="locker_address">locker address</string>
    <string name="empty_string">-</string>
    <string name="street">Street:</string>
    <string name="locker_size">locker size</string>
    <string name="zip_code">Zip Code:</string>
    <string name="city">City:</string>
    <string name="choose_an_address">Choose an address</string>
    <string name="locker">LOCKER</string>
    <string name="residents_from_condo_building">Residents from Condo Building:</string>
    <string name="number">number:</string>
    <string name="size">size:</string>
    <string name="address">address:</string>
    <string name="add_temporary_locker">If no locker match to your criteria than you can\nADD THIS LOCKER AS TEMPORARY</string>
    <string name="building_unique_number">Building unique number:</string>
    <string name="building_name">Building name:</string>
    <string name="building_address">Building address:</string>
    <string name="no_available_residents_in_current_building_and_with_that_name_or_suite_number">No available residents in current building and with that name or suite number</string>
    <string name="locker_empty_list_message">No available lockers according your criteria</string>
    <string name="address_empty_list_message">No available addresses</string>
    <string name="building_empty_list_message">No available building with that building unique number or building name requested</string>
    <string name="no_available_residents">No available residents at that unit number or whith name requested</string>
    <string name="close_button_message">X</string>
    <string name="main_message_final_post">Please wait until you get confirmation that notification was sent to resident...</string>
    <string name="back_to_scan_screen_button">Back to Scan Screen</string>
    <string name="please_focus_on_qrcode">Please focus on QRCode</string>
    <string name="log_out_button">log out button</string>
    <string name="locker_details">Locker details:</string>
    <string name="resident_details">Resident details:</string>
    <string name="name">Name:</string>
    <string name="suite">Suite #:</string>
    <string name="phone">Phone:</string>
    <string name="the_security_code_is">The security code is</string>
    <string name="click_to_confirm_when_locker_is_locked">Click to confirm when locker is locked</string>
    <string name="locker_icon">locker icon</string>
    <string name="resident_icon">resident icon</string>
    <string name="logo">logo</string>
    <string name="city_name">City Name</string>
    <string name="suite_number">Unit number:</string>
    <string name="email">Email:</string>
    <string name="address_added">Address added</string>
    <string name="address_was_successfully_added">Address was successfully added.</string>
    <string name="locker_added">Locker added</string>
    <string name="locker_number">Locker #</string>
    <string name="locker_added_message"> was successfully added. You want to continue with resident assignment for this locker?</string>
    <string name="locker_added_message1"> was successfully added. You want to continue with adding another new locker?</string>
    <string name="add_address">Add Address</string>
    <string name="add_locker">Add Locker</string>
    <string name="add_resident">Add resident</string>
    <string name="add_address_question">Would you want to add new ADDRESS?</string>
    <string name="address_tapped">Address tapped</string>
    <string name="address_tapped_question">Would you want to take over this address?</string>
    <string name="choose_building">Choose Building</string>
    <string name="building_tapped">Building tapped</string>
    <string name="building_tapped_question">Would you want to take over this building?</string>
    <string name="creating_locker_history">Creating locker history...</string>
    <string name="sending_notification_to_resident">Sending notification to resident...</string>
    <string name="notification_was_sent">A notification about package was sent to resident.</string>
    <string name="creating_locker_building_resident_association">Creating locker - bulding - resident association...</string>
    <string name="sending_notification_failed">Sending notification to resident failed.</string>
    <string name="change_password">Change password</string>
    <string name="input_email">Input email where you will get change password link</string>
    <string name="check_email">Check your email to get instructions link.</string>
    <string name="error">Error</string>
    <string name="this_email_does_not_exist">This email does not exist</string>
    <string name="something_went_wrong">Something went wrong...Internet appear to be offline!</string>
    <string name="login_error_title">Login error</string>
    <string name="user_not_exist">User does not exist or user email/password is not correct</string>
    <string name="camera_permission_denied">Camera permission denied!</string>
    <string name="search_resident">Search resident</string>
    <string name="scan_label">SCAN</string>
    <string name="search_by_street">Search by street</string>
    <string name="search_cities">Search cities</string>
    <string name="locker_not_found">Locker not found</string>
    <string name="locker_not_found_message">This locker was not found in database.\nWould you like to add it?</string>
    <string name="no_user_building_title">No building</string>
    <string name="no_user_building_message">You\'ve not been assigned any building. Please contact your administrator.</string>
    <string name="login_redirected_message"> You\'ll be redirected to the login screen.</string>
    <string name="choose_building_for_residents"> You have to choose building\nto see its residents</string>
    <string name="add_orphan_parcel">If no resident match to parcel\'s label than you can \nADD TO UNKNOWN PARCELS</string>
    <string name="building">Building:</string>
    <string name="no_proper_rights">No proper rights</string>
    <string name="no_create_orphan_parcel">You don\'t have right to add unknown parcels. Contact administrator.</string>
    <string name="no_create_parcel">You don\'t have right to add parcels into lockers. Contact administrator.</string>
    <string name="no_create_locker">You don\'t have right to add lockers. Contact admistrator or scan another locker.</string>
    <string name="no_create_locker1"> You don\'t have right to add lockers. You can put the parcel into unregistered locker. Do you want to do that?</string>
    <string name="orphan_parcel">Temporary locker</string>
    <string name="already_exist">Already exist</string>
    <string name="locker_already_added">This locker was already added in database. Try to add another one.</string>
    <string name="optional_address_detail">optional address detail</string>
    <string name="creating_association_with_temporary_locker">Creating association with temporary locker...</string>
    <string name="scan_info">Image cropping so that it takes over only the area of interest, ensures better text detection</string>
    <string name="tap_anywhere">Tap anywhere to capture image</string>
</resources>
