<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.AddLockerActivity">

    <ScrollView
        android:id="@+id/add_locker_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:layout_weight="1"
                android:text="@string/text_info"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/lockerImageView"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/locker_icon_blue" />

            <TextView
                android:id="@+id/lockNumberLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="@string/locker_number"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:textStyle="italic"
                android:layout_marginStart="8dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinputLayoutLockerNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:theme="@style/EditTextHint">

                <AutoCompleteTextView
                    android:id="@+id/lockerNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_corner_toggle_blue_light"
                    android:dropDownHeight="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textVisiblePassword|textCapCharacters"
                    android:maxLines="1"
                    android:nextFocusDown="@id/lockerSize"
                    android:padding="10dp"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/lockerAddressLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/locker_address"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:textStyle="italic"
                android:layout_marginStart="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="8dp"
                android:baselineAligned="false">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2">

                    <TextView
                        android:id="@+id/streetLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:text="@string/street"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/streetTextView" />

                    <TextView
                        android:id="@+id/streetTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="70dp"
                        android:layout_marginLeft="70dp"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:text="@string/empty_string"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toTopOf="@+id/zipCodeTextView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/zipCodeLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/zip_code"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/zipCodeTextView" />

                    <TextView
                        android:id="@+id/zipCodeTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="@string/empty_string"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toTopOf="@+id/cityTextView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/streetTextView"
                        app:layout_constraintTop_toBottomOf="@+id/streetTextView" />

                    <TextView
                        android:id="@+id/cityLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/city"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/cityTextView" />

                    <TextView
                        android:id="@+id/cityTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="@string/empty_string"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/zipCodeTextView"
                        app:layout_constraintTop_toBottomOf="parent" />
                </android.support.constraint.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/bAddAddress"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_corner_circle"
                        android:contentDescription="@string/choose_an_address"
                        app:srcCompat="@drawable/add_address_icon" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/lockerSizeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="@string/locker_size"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:textStyle="italic"
                android:layout_marginStart="8dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:theme="@style/EditTextHint"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@android:color/darker_gray">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/lockerSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_corner_toggle_blue_light"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textCapCharacters"
                    android:maxLines="1"
                    android:nextFocusUp="@id/lockerNumber"
                    android:padding="10dp"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>