<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Name" />

    <TextView
        android:id="@+id/tvUnitNumberLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/suite_number"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvUnitNumber" />

    <TextView
        android:id="@+id/tvBuildingNameLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/building_name"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tvUnitNumberLabel"
        app:layout_constraintTop_toTopOf="@+id/tvBuildingName" />

    <TextView
        android:id="@+id/tvStreetLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/street"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tvBuildingNameLabel"
        app:layout_constraintTop_toTopOf="@+id/tvStreet" />

    <TextView
        android:id="@+id/tvAddressLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tvBuildingNameLabel"
        app:layout_constraintTop_toTopOf="@+id/tvAddress" />

    <TextView
        android:id="@+id/tvUnitNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/empty_string"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvBuildingName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/empty_string"
        android:textColor="@color/cardview_dark_background"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvUnitNumber"
        app:layout_constraintTop_toBottomOf="@+id/tvUnitNumber" />

    <TextView
        android:id="@+id/tvStreet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/empty_string"
        android:textColor="@color/cardview_dark_background"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvBuildingName"
        app:layout_constraintTop_toBottomOf="@+id/tvBuildingName" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/empty_string"
        android:textColor="@color/cardview_dark_background"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/imageView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvStreet"
        app:layout_constraintTop_toBottomOf="@+id/tvStreet" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:color/darker_gray" />
</androidx.constraintlayout.widget.ConstraintLayout>